# SSafer

./: .gitignore  .gitleaks.toml  LICENSE  README.md  package-lock.json  ssafer.example.yml
.gitlab/: MRtemplate.md
AI/: .env.example  Dockerfile  README.md  requirements.txt
AI/app/: main.py
AI/data/: analysis_result.actual_test.json  analysis_result.json  analysis_result.my_test.json  analysis_result.postman_test.json  (+7 more)
CLI/: .gitignore  README.md  pyproject.toml
CLI/docs/: cli_commands.md  cli_regression_tests.md
CLI/ssafer/: main.py
CLI/ssafer/core/: agent.py  analysis_result.py  auth.py  compose.py  config.py  constants.py  doctor.py  env_parser.py  patches.py  result_store.py  sanitize.py  trivy.py  upload.py
CLI/ssafer/rules/: __init__.py  base.py  compose_rules.py  engine.py  env_rules.py
CLI/ssafer/server/: __init__.py  audit.py
CLI/tests/: security_samples.py  test_agent.py  test_analysis_result.py  test_auth.py  test_compose_sets.py  test_config.py  test_doctor.py  test_env_parser.py  test_finder.py  test_masking_patterns.py  test_patches.py  test_report.py  test_rules.py  test_scan_schema.py  test_server_audit.py  test_trivy.py  test_upload.py
Engine/: pyproject.toml
Engine/engine/: app.py  upload_scanner.py
Frontend/: .env.example  .gitignore  .prettierignore  README.md  docker-compose.front.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
Infra/: CLAUDE.md  Jenkinsfile  README.md
docs/: frontend_architecture_guidelines.md  frontend_component_review_checklist.md  git_jira_convention.md  open-source-release-checklist.md  project_plan.md  service-overview.md
exec/: 1.build_and_deploy.md  2.external_service.md  3.db_dump.sql  4.scenario.pptx
(+785 files in other folders)
