[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssafer"
version = "0.3.8"
description = "Security copilot CLI — scan Docker Compose, .env, Dockerfile, and server runtime for misconfigurations."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SSAfer Team" },
]
keywords = ["security", "docker", "devops", "scanner", "cli", "devsecops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "websockets>=12.0",
]

[project.urls]
Homepage = "https://ssafer.co.kr"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ssafer = "ssafer.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
